# boolean_search

./: .gitignore  CMakeLists.txt  README.md  extract_dataset.sh  index.sh  readme.txt  search.sh
include/: codec.hpp  defs.hpp  file_manager.hpp  parser.hpp  query_tree.hpp  tokenizer.hpp  util.hpp
src/: CMakeLists.txt  file_manager.cpp  main_indexer.cpp  main_searcher.cpp  parser.cpp  query_tree.cpp  tokenizer.cpp  util.cpp
